se elimino el icono de menu en la version desktop

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,4 +119,17 @@ button:hover {
     gap: 20px;
     padding: 20px;
   }
+  .navbar {
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    padding: 10px;
+    width: 100%;
+    grid-area: a;
+    background-color: rgb(255, 255, 255);
+  }
+  .navbar i {
+    display: none;
+  }
 }
